# igvc_ws

.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  local_setup.bash  local_setup.sh  local_setup.zsh  setup.bash  setup.sh  setup.zsh
devel/.private/catkin_tools_prebuild/: .catkin  setup.sh
devel/.private/gazelle_sim/: .catkin
devel/.private/gazelle_sim_barrel_course/: .catkin  .rosinstall  (+2 more)
logs/hokuyo_node/: build.cmake.000.log.stderr  build.cmake.001.log.stderr
logs/nmea_navsat_driver/: build.cmake.000.log.stderr
logs/urg_node/: build.check.000.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.006.log.stderr
src/gazelle_sim_barrel_course/: README.md  package.xml
src/gazelle_sim_barrel_course/launch/: barrel_course.launch
src/gazelle_sim_barrel_course/map/: barrel_course.yaml  barrel_course_lidar.yaml
src/gazelle_sim_j129_l2_course/: CMakeLists.txt  Example_J129.webm
src/igvc_lane_follow/: CMakeLists.txt  package.xml
src/igvc_lane_follow/arduino/igvc_lane_follow/: platformio.ini
src/igvc_lane_follow/arduino/igvc_lane_follow/src/: igvc_lane_follow.cpp
src/igvc_lane_follow/cfg/: LaneFollowDynCfg.cfg  LineFollowDynCfg.cfg
src/igvc_lane_follow/launch/: igvc_lane_follow.launch  lane_follow_igvc.launch
src/igvc_lane_follow/post/: p_control_0_5.bag  p_control_1.bag  plot_centerline.py
src/igvc_lane_follow/scripts/: lane_follow.py  line_follow.py
src/igvc_obj_detect/: CMakeLists.txt
src/igvc_od_sim/: CMakeLists.txt  package.xml
src/igvc_waypoint_nav/: CMakeLists.txt
(+353 files in other folders)
