<?xml version="1.0"?>
<package format="2">
  <name>lane_follow_igvc</name>
  <version>0.0.0</version>

  <description>The lne following IGVC package</description>
  <maintainer email="student@todo.todo">student</maintainer>
  <license>TODO</license>
    
  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

</package>
